Site/webapp/wdkCustomization/css/client.css
/* ... */
.eupathdb-RecordOverviewItem {
  white-space: nowrap;
  width: 100%;
  overflow-x: hidden;
  text-overflow: ellipsis;
}

.eupathdb-RecordOverviewItem, .eupathdb-RecordOverviewLink, .eupathdb-ThumbnailLabel {
  margin: .2em 0;
  font-size: 1.4em;
  font-weight: 300;
}

.eupathdb-RecordOverviewItem[data-label]:before {
  content: attr(data-label) ": ";
  font-weight: bold;
}

.eupathdb-RecordOverviewItem:empty {
  display: none;
}

/* Hide sections based on gene type */
.eupathdb-RecordOverview[data-show-gene-type] {
  display: none;
}

.eupathdb-RecordOverview[data-gene-type="protein coding"] [data-show-gene-type="protein coding"] {
  display: initial;
}

/* Hide sections based on number of comments */
.eupathdb-RecordOverview [data-show-num-user-comments] {
  display: none;
}

/* if data-show-num-user-comments is '0' and we don't have comments, show section */
.eupathdb-RecordOverview[data-num-user-comments=""] [data-show-num-user-comments="0"],
.eupathdb-RecordOverview[data-num-user-comments="0"] [data-show-num-user-comments="0"] {
  display: initial;
}

/* if data-show-num-user-comments begins with a '+' and we have comments, show section */
.eupathdb-RecordOverview:not([data-num-user-comments=""]):not([data-num-user-comments="0"]) [data-show-num-user-comments="+1"] {
  display: initial;
}

/* if data-show-num-user-comments equals '+2' and we have more than 2 comments, show section */
.eupathdb-RecordOverview:not([data-num-user-comments=""]):not([data-num-user-comments="0"]):not([data-num-user-comments="1"]) [data-show-num-user-comments="+2"] {
  display: initial;
}

.GeneOverviewIntent {
  font-size: 1.2em;
  font-style: italic;
}

.GeneOverviewGeneType {
  position: relative;
  top: -1em;
  font-weight: normal;
}

.wdk-Record-sidebar-title {
  padding: .4em 1.5em .4em 1em;
}

.eupathdb-TranscriptTabContent .wdk-RecordSection {
  margin-top: -84px;
  padding-top: 64px;
}

.eupathdb-VerticalScrollHelper {
  padding: 0 30px;
  position: relative;
  height: 100%;
}

.eupathdb-VerticalScrollHelperButton {
  position: absolute;
  height: 100%;
  top: 0;
  border: none;
  background: transparent;
}

.eupathdb-VerticalScrollHelperButton:hover {
  color: black;
}

.eupathdb-VerticalScrollHelperButton[disabled] {
  color: lightgrey;
}

.eupathdb-VerticalScrollHelperButton:first-child {
  left: 0;
  border-right: 1px solid #ccc;;
}

.eupathdb-VerticalScrollHelperButton:last-child {
  right: 0;
  border-left: 1px solid #ccc;;
}

.eupathdb-ThumbnailsContainer {
  border: 1px solid #d8d8d8;
  padding: 4px 6px 8px;
  background: #f2f2f2;
  border-radius: 4px;
  margin-top: 16px;
  display: inline-block;
  max-width: 100%;
  min-height: 140px;
  white-space: nowrap;
}

.eupathdb-ThumbnailWrapper {
  display: inline-block;
  vertical-align: top;
  margin: 0 1em;
  min-width: 152px;
}

.eupathdb-Thumbnail {
  border: 1px solid #d8d8d8;
  display: inline-block;
}

.eupathdb-ThumbnailWrapper img {
  display: block;
  width: 150px;
}

.eupathdb-Thumbnail__ExpressionGraphs {
  position: relative;
}

.eupathdb-Thumbnail__ExpressionGraphs:before {
  content: attr(data-count) " data sets";
  position: absolute;
  width: 100%;
  height: 100%;
  line-height: 100px;
  font-size: 1.8em;
  font-weight: 300;
  text-align: center;
  text-shadow: 0px 0px 1px black;
  color: white;
  background: rgba(0,0,0,.4);
  z-index: 1;
}

.eupathdb-ThumbnailPopover .eupathdb-Thumbnail__ExpressionGraphs:before {
  font-size: 10vh;
  line-height: 75vh;
}

.eupathdb-Thumbnail__ExpressionGraphs img {
  -moz-filter: grayscale(.7) blur(1px);
  -webkit-filter: grayscale(.7) blur(1px);
  -o-filter: grayscale(.7) blur(1px);
  -ms-filter: grayscale(.7) blur(1px);
  filter: grayscale(.7) blur(1px);
}

.eupathdb-ThumbnailPopover {
  position: fixed;
  z-index: 100;
  background: #1f1f1f;
  color: #fafafa;
  border: 1px solid #aaa;
  box-shadow: 0px 0px 20px #999;
  border-radius: 10px;
  padding: 6px;
}

.eupathdb-ThumbnailPopover h3 {
  text-align: center;
  padding: 2px 0;
  font-weight: 400;
}

.eupathdb-ThumbnailPopover > div {
  text-align: center;
  padding-bottom: 4px;
}

.eupathdb-ThumbnailPopover img {
  max-height: 75vh;
  max-width: 80vw;
  border: 1px solid #aaa;
  display: block;
}

.eupathdb-GbrowseContext {
  padding: 0 1em;
}

.eupathdb-GbrowseContextHeader {
  font-weight: bold;
}

.eupathdb-GbrowseContextContent {
  padding-bottom: 1em;
}

.eupathdb-GbrowseImage {
  max-width: 100%;
}

.eupathdb-GbrowseImageMapTooltip {
  font-size: 1.2em;
  line-height: 1.2;
  max-width: 600px;
}

.eupathdb-ExpressionGraphsDataTableContainerHeader {
  font-weight: 500;
  margin: 0;
}

.eupathdb-ExpressionGraphsDataTableContainer td:nth-child(1),
.eupathdb-ExpressionGraphsDataTableContainer td:nth-child(2) {
  white-space: normal;
}

/*
.eupathdb-Thumbnail:hover {
  position: absolute;
  z-index: 1;
  height: auto;
  width: 710px;
  box-shadow: 0px 0px 14px #ddd;
  left: 30em;
}

.eupathdb-Thumbnail:hover img {
  width: 800px;
  left: -90px;
}
*/

.eupathdb-ExpressionGraphContainer {
  overflow: auto;
  position: relative;
  padding: 0 4px;
}

.eupathdb-ExpressionGraphLoading {
  position: absolute;
  top: 1em;
  left: 1em;
}

.eupathdb-ExpressionGraph {
  float: left;
}

.eupathdb-ExpressionGraphDetails {
  margin-left: 500px;
}

.eupathdb-ExpressionGraphDescriptionHeader {
  margin: 0;
}

.wdk-RecordAttributeSectionItem.wdk-RecordAttributeSectionItem__fasta_transcript_sequence {
  width: 100%;
}

.wdk-RecordAttributeSectionItem.wdk-RecordAttributeSectionItem__fasta_transcript_sequence .wdk-RecordAttributeName {
  display: block;
}

.wdk-RecordTable__ExampleGraphs .wdk-DataTable,
.wdk-RecordTable__ExpressionGraphs .wdk-DataTable,
.wdk-RecordTable__ExpressionGraphs .wdk-DataTable,
.wdk-RecordTable__ProteinExpressionGraphs .wdk-DataTable {
  table-layout: fixed;
  width: 100%;
}

.wdk-DataTableCellExpand {
  color: #777;
}
/* ... */

